<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ui.activities.HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/doc_image"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_logo"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        >

        <TextView
            android:id="@+id/tv_pageHeadAppointmentList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:fontFamily="@font/helvetica"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <ImageView
            android:id="@+id/iv_dot_logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_weight="1"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/dot_more_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lv_homeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_logo"
        >
        <TextView
            android:id="@+id/tv_schedule"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:drawableStart="@drawable/calendar_icon"
            android:fontFamily="@font/helvetica"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_isamed"
            android:textSize="@dimen/_14sdp"
            android:text="@string/schedule"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/blue_isamed"
            />
        <TextView
            android:id="@+id/tv_searchPatient"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:drawableStart="@drawable/icon_search_blue"
            android:fontFamily="@font/helvetica"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_isamed"
            android:textSize="@dimen/_14sdp"
            android:text="@string/search_for_patient"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/blue_isamed"
            />
        <TextView
            android:id="@+id/tv_prescription"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:drawableStart="@drawable/icon_prescription_blue"
            android:fontFamily="@font/helvetica"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_isamed"
            android:textSize="@dimen/_14sdp"
            android:text="@string/prescription"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/blue_isamed"
            />
        <TextView
            android:id="@+id/tv_testResults"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:drawableStart="@drawable/icon_test_result_blue"
            android:fontFamily="@font/helvetica"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_isamed"
            android:textSize="@dimen/_14sdp"
            android:text="@string/test_results"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/blue_isamed"
            />
        <TextView
            android:id="@+id/tv_labOrders"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:drawableStart="@drawable/icon_lab_ord_blue"
            android:fontFamily="@font/helvetica"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_isamed"
            android:textSize="@dimen/_14sdp"
            android:text="@string/lab_orders"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/blue_isamed"
            />
        <TextView
            android:id="@+id/tv_sonograms"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:drawableStart="@drawable/icon_sonogram_blue"
            android:fontFamily="@font/helvetica"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_isamed"
            android:textSize="@dimen/_14sdp"
            android:text="@string/sonograms"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/blue_isamed"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>