<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ui.activities.DiagnosisListActivity">

    <LinearLayout
        android:id="@+id/ll_logo"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_5sdp"
        android:background="@color/blue_action_bar_isamed"
        >
        <ImageView
            android:id="@+id/iv_backButton"
            android:layout_weight="1"
            android:layout_gravity="left|center_vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"/>
        <TextView
            android:layout_weight="8"
            android:id="@+id/tv_pageHeadFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/helvetica"
            android:text="@string/diagnosis_list"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:fontFamily="@font/helvetica"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
    <EditText
        android:id="@+id/et_searchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:singleLine="true"
        android:maxLength="20"
        android:fontFamily="@font/helvetica"
        android:hint="@string/search"
        android:textSize="@dimen/_12sdp"
        android:inputType="textCapSentences"
        android:gravity="center_vertical|start"
        android:paddingHorizontal="@dimen/_10sdp"
        android:background="@drawable/search_box_background"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableEnd="@drawable/icon_search_light_blue"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_diagnosisList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        />

    </androidx.core.widget.NestedScrollView>

</LinearLayout>