<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ui.activities.FilterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/ll_logo"
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/blue_action_bar_isamed"
            >
            <ImageView
                android:id="@+id/iv_backButton"
                android:layout_weight="1"
                android:layout_gravity="start|center_vertical"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"/>
            <TextView
                android:layout_weight="8"
                android:id="@+id/tv_pageHeadFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/helvetica"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:fontFamily="@font/helvetica"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_filterDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/helvetica"
            android:lines="2"
            android:text="@string/filter_description_msg"
            android:textAlignment="textStart"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/description_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_logo"
            />
        <TextView
            android:id="@+id/tv_mandatory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/helvetica"
            android:lines="1"
            android:text="@string/fields_mandatory"
            android:textAlignment="textStart"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/isamed_warning_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_filterDescription"
            />
        <LinearLayout
            android:id="@+id/ll_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="15"
            android:layout_marginVertical="@dimen/_5sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mandatory"
            >
            <TextView
                android:layout_weight="11"
                android:id="@+id/tv_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/helvetica"
                android:lines="1"
                android:text="@string/first_name"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/et_label_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_filterDescription"
                />
            <EditText
                android:layout_weight="4"
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="20"
                android:inputType="textCapSentences"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="@dimen/_5sdp"
                android:background="@drawable/edit_text_background"
                android:lines="1"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black_text_color"
                android:fontFamily="@font/helvetica" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="15"
            android:layout_marginVertical="@dimen/_5sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_firstName"
            >
            <TextView
                android:layout_weight="11"
                android:id="@+id/tv_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/helvetica"
                android:lines="1"
                android:text="@string/last_name"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/et_label_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_filterDescription"
                />
            <EditText
                android:layout_weight="4"
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="20"
                android:inputType="textCapSentences"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="@dimen/_5sdp"
                android:background="@drawable/edit_text_background"
                android:lines="1"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black_text_color"
                android:fontFamily="@font/helvetica" />

        </LinearLayout>





        <TextView
            android:id="@+id/tv_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/helvetica"
            android:lines="1"
            android:text="@string/optional_fields"
            android:textAlignment="textStart"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/isamed_warning_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_lastName"
            />
        <LinearLayout
            android:id="@+id/ll_accountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="15"
            android:layout_marginVertical="@dimen/_5sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_optional"
            >
            <TextView
                android:layout_weight="11"
                android:id="@+id/tv_accountNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/helvetica"
                android:lines="2"
                android:text="@string/account_number"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/et_label_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_filterDescription"
                />
            <EditText
                android:layout_weight="4"
                android:id="@+id/et_accountNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="30"
                android:inputType="number"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="@dimen/_5sdp"
                android:background="@drawable/edit_text_background"
                android:lines="1"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black_text_color"
                android:fontFamily="@font/helvetica" />

        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_orSeperator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_accountNumber"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/separator_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:padding="20dp"
                android:textSize="@dimen/_14sdp"
                android:background="@drawable/or_bg"
                android:textColor="@color/lightBlue_isamed"
                android:fontFamily="@font/helvetica"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/ll_SSN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="15"
            android:layout_marginVertical="@dimen/_5sdp"
            android:paddingVertical="@dimen/_2sdp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_orSeperator"
            >
            <TextView
                android:layout_weight="11"
                android:id="@+id/tv_SSN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/helvetica"
                android:lines="1"
                android:text="@string/ssn"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/et_label_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_filterDescription"
                />
            <EditText
                android:layout_weight="4"
                android:id="@+id/et_SSN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="30"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="@dimen/_5sdp"
                android:background="@drawable/edit_text_background"
                android:lines="1"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black_text_color"
                android:fontFamily="@font/helvetica" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>